refactor(OutputView) : 지각을 결석으로 간주해서 정렬